--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  margin: 10px 30px;
+  padding-top: 10px;
+  border-radius: 5px;
+  box-shadow: 0 5px 10px rgba(187, 185, 170, 0.6);
+  background-color: rgba(236, 244, 226, 0.6);
 }
 
 
